--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,12 @@
   "theme_color": "#334155",
   "icons": [
     {
-      "src": "assets/icon-192x192.png",
+      "src": "./assets/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "assets/icon-512x512.png",
+      "src": "./assets/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
